--- a/src/app/components/store/cart/cart.component.css
+++ b/src/app/components/store/cart/cart.component.css
@@ -86,19 +86,20 @@ section.cart-header .grid-box-shadow .cart-singleitem .data-cart .cart-details p
 .other-additional-product .promo-code .form-group {width: 100%;padding-bottom: 20px;margin-bottom: 12px;border-bottom: 1px solid #e8e8e8;position: relative;}
 
 .other-additional-product .promo-code .form-group input {
-  height: 54px;
-  font-family: 'g-medium';
-  color: rgba(0 0 0/0.6);
-  font-size: 16px;
-  border: 1px solid #1d1d1d;
-  padding-right: 40px;
+    height: 50px;
+    font-family: 'g-medium';
+    color: rgba(0 0 0/0.6);
+    font-size: 16px;
+    border: 1px solid #1d1d1d;
+    padding-right: 40px;
 }
 
 .other-additional-product .promo-code span.btn-add-promo {
   position: absolute;
-  top: 13px;
+  top: 11px;
   right: 15px;
   cursor: pointer;
+  pointer-events: none;
 }
 
 .other-additional-product .promo-code span.btn-add-promo svg {
