Worked on the Enrollment packs page and designed it.| Worked on the UI issues on the sidebar checkout Form fields.

--- a/src/app/components/home/enrollment/enrollment-packs/enrollment-packs.component.html
+++ b/src/app/components/home/enrollment/enrollment-packs/enrollment-packs.component.html
@@ -20,7 +20,7 @@
                             {{data.itemDescription}}
                         </h3>
                         <p class="price-pack">
-                            ${{data.price}}
+                            ${{data.price}}.00
                         </p>
                         <p class="pv-value">
                             PV-0.00
@@ -38,10 +38,10 @@
                 </div>
             </div>
         </div>
-        <br>
+    
         <div class="continue">
             <button class="btn btn-info">Continue</button>
         </div>
-        <br>
+       
     </div>
 </section>
