--- a/src/app/components/layout/app-notification-bar/app-notification-bar.component.html
+++ b/src/app/components/layout/app-notification-bar/app-notification-bar.component.html
@@ -1,3 +1,9 @@
 <div class="topbar">
   <p>This is spectacular offer up here SHOP NOW!</p>
+  <span class="icon-close">
+    <svg id="Icon_Close_Rounded" data-name="Icon / Close / Rounded" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      <rect id="Box" width="24" height="24" fill="none"/>
+      <path id="Path_2016" data-name="Path 2016" d="M111.8,3.3a.967.967,0,0,0-1.4,0l-4.9,4.9-4.9-4.9a.99.99,0,0,0-1.4,1.4l4.9,4.9-4.9,4.9a.99.99,0,0,0,1.4,1.4l4.9-4.9,4.9,4.9a.99.99,0,1,0,1.4-1.4l-4.9-4.9,4.9-4.9A.967.967,0,0,0,111.8,3.3Z" transform="translate(-94 2)" fill="#fff"/>
+    </svg>
+  </span>
 </div>
