--- a/src/styles.css
+++ b/src/styles.css
@@ -1054,13 +1054,42 @@ ul.conv-products input[type="checkbox"] ~ .custom-control-label::before {
   font-family: 'g-regular';
 }
 
+app-notification-bar .topbar {
+  position: relative;
+}
 
+app-notification-bar .topbar span.icon-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
 
 /* MEDIA */
+@media (min-width: 1367px)
+{
+  section.testimonial-home h3 {
+    font-size: 50px !important;
+  }
+  .testimonial-wrapper h4 {
+    font-size: 24px;
+    color: rgba(0 0 0/0.8);
+}
+}
 @media (min-width: 1366px)
 {
 .container, .container-lg, .container-md, .container-sm, .container-xl {
     max-width: 1300px !important;
+}
+}
+@media (max-width: 1366px)
+{
+
+.content-banner-slider a.btn-learn
+{
+  font-size: 14px !important;
+}
+.content-safe a {
+  font-size: 14px!important;
 }
 }
 
