Worked on the UI issues for homepage

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -298,7 +298,7 @@ ul.testimonial-images li img {
         padding: 3px 15px !important;
     }
     
-    .content-safe h3 {
+    section.wink-energy .content-safe h3 {
         font-size: 34px !important;
         max-width: 150px;
         margin: 0 auto 40px;
